# rustybar

./: .gitignore  .travis.yml  Cargo.toml  README.md  config.json  config.toml  example_config.toml  flake.nix  justfile  notes.org  todo.org
old/: brightness.rs  stdin.rs  temp.rs  volume.rs
src/: bar.rs  batterybar.rs  brightnessbar.rs  bytes.rs  clockbar.rs  color.rs  colormap.rs  config.rs  consumer.rs  cpubar.rs  cputempbar.rs  draw.rs  iced_bar.rs  lib.rs  main.rs  memorybar.rs  networkbar.rs  producer.rs  state.rs  statusbar.rs  stdin.rs  stdinbar.rs  testbar.rs  ticker.rs  updater.rs  util.rs  volumebar.rs
src/bar/: battery.rs  brightness.rs  clock.rs  cpu.rs  cpu_temp.rs  memory.rs  mod.rs  network.rs  rainbow.rs  stdin.rs  temp.rs  test.rs  volume.rs
src/consumer/: battery.rs  clock.rs  cpu.rs  memory.rs  mod.rs  network.rs  temp.rs  window_diagram.rs  window_title.rs  workspace.rs
src/producer/: battery.rs  clock.rs  mod.rs  niri.rs  stdin.rs  system.rs  tick.rs
src/util/: bytes.rs  color.rs  draw.rs  overflow_row.rs  screen.rs
