[package]
name    = "rustybar"
version = "0.2.0"
authors = ["Paho Lurie-Gregg <paho@paholg.com>"]
edition = "2021"

[dependencies]
async-stream     = "0.3.6"
async-trait      = "0.1.88"
color-eyre       = "0.6.3"
config           = "0.15.11"
directories      = "6.0.0"
enum_dispatch    = "0.3.13"
eyre             = "0.6.12"
futures          = "0.3.31"
iced             = { version = "0.13.1", features = ["tokio"] }
iced_layershell  = "0.13.5"
inotify          = "0.11.0"
jiff             = "0.2.5"
niri-ipc         = "25.2.0"
regex            = "1.11.1"
serde            = { version = "1.0.219", features = ["derive"] }
starship-battery = "0.10.1"
strum            = { version = "0.27.1", features = ["derive"] }
sysinfo          = "0.34.2"
tokio            = { version = "1.44.2", features = ["full"] }
