[package]
name    = "rustybar"
version = "0.2.0"
authors = ["Paho Lurie-Gregg <paho@paholg.com>"]
edition = "2024"

[dependencies]
async-stream     = "0.3.6"
async-trait      = "0.1.89"
color-eyre       = "0.6.5"
config           = "0.15.19"
directories      = "6.0.0"
eyre             = "0.6.12"
futures          = "0.3.31"
iced_core        = { version = "0.14.0", features = ["serde"] }
typetag          = "0.2"
iced             = { version = "0.14.0", features = ["tokio", "canvas", "svg"] }
iced_layershell  = "0.14.2"
inotify          = "0.11.0"
jiff             = "0.2.18"
niri-ipc         = "25.11.0"
regex            = "1.12.2"
serde            = { version = "1.0.228", features = ["derive"] }
serde_json       = "1.0.149"
starship-battery = "0.10.3"
strum            = { version = "0.27.2", features = ["derive"] }
sysinfo          = "0.37.2"
tokio            = { version = "1.49.0", features = ["full"] }
base64 = "0.22.1"
