[package]
name    = "rustybar"
version = "0.2.0"
authors = ["Paho Lurie-Gregg <paho@paholg.com>"]
edition = "2024"

[dependencies]
async-stream     = "0.3.6"
async-trait      = "0.1.89"
color-eyre       = "0.6.5"
config           = "0.15.25"
directories      = "6.0.0"
eyre             = "0.6.12"
futures          = "0.3.32"
iced_core        = { version = "0.14.0", features = ["serde"] }
typetag          = "0.2"
iced             = { version = "0.14.0", features = ["tokio", "canvas", "svg", "advanced"] }
iced_layershell  = "0.18.1"
inotify          = "0.11.3"
jiff             = "0.2.31"
niri-ipc         = "26.4.0"
regex            = "1.12.4"
serde            = { version = "1.0.228", features = ["derive"] }
serde_json       = "1.0.150"
starship-battery = "0.11.1"
strum            = { version = "0.28.0", features = ["derive"] }
sysinfo          = "0.39.5"
tokio            = { version = "1.52.3", features = ["full"] }
base64 = "0.22.1"
